fix loading not showing full thing

--- a/src/components/stage-preview/stage-preview.less
+++ b/src/components/stage-preview/stage-preview.less
@@ -6,6 +6,7 @@
   align-items: stretch;
   overflow: auto;
   position: relative;
+  flex-grow: 1;
 
   &-invalid {
     padding-left: 15px;
@@ -16,7 +17,6 @@
     fill: none;
     stroke: #89979B;
     text-align: center;
-    margin-top: 50px;
   }
 
   &-out {
